add logo, brand name, and poppins google font

--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
   <!-- CSS stylesheet -->
   <link rel="stylesheet" href="./css/style.css">
   <!-- Icon scout CSS -->
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 </head>
 <body>
-  
+  <nav>
+    <div class="logo-name">
+      <div class="logo-image">
+        <img src="./images//b2brain-logo-full-svg.png" alt="">
+      </div>
+      <span class="logo_name">B2Brain</span>
+    </div>
+  </nav>
 </body>
 </html>
