--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,14 +11,69 @@
   <!-- Icon scout CSS -->
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 </head>
+
 <body>
+  <!-- nav start here -->
   <nav>
+    <!-- nav logo and brand name -->
     <div class="logo-name">
       <div class="logo-image">
         <img src="./images//b2brain-logo-full-svg.png" alt="">
       </div>
       <span class="logo_name">B2Brain</span>
     </div>
+    <!-- nav menu items -->
+    <div class="menu-items">
+      <ul class="nav-links">
+        <li><a href="#">
+            <i class="uil uil-estate"></i>
+            <span class="link-name">Dashboard</span>
+          </a></li>
+        <li><a href="#">
+            <i class="uil uil-star"></i>
+            <span class="link-name">Intels</span>
+          </a></li>
+        <li><a href="#">
+            <i class="uil uil-user"></i>
+            <span class="link-name">Leads</span>
+          </a></li>
+        <li><a href="#">
+            <i class="uil uil-building"></i>
+            <span class="link-name">Accounts</span>
+          </a></li>
+        <li><a href="#">
+            <i class="uil uil-setting"></i>
+            <span class="link-name">Preferences</span>
+          </a></li>
+        <li><a href="#">
+            <i class="uil uil-link"></i>
+            <span class="link-name">Integrations</span>
+          </a></li>
+        <li><a href="#">
+            <i class="uil uil-users-alt"></i>
+            <span class="link-name">Team</span>
+          </a></li>
+        <li><a href="#">
+            <i class="uil uil-comment-question"></i>
+            <span class="link-name">Help / Support</span>
+          </a></li>
+      </ul>
+      <!-- logout, dark and white mode -->
+      <ul class="logout-mode">
+        <li><a href="#">
+            <i class="uil uil-signout"></i>
+            <span class="link-name">Logout</span>
+          </a></li>
+
+        <li class="mode">
+          <a href="#">
+            <i class="uil uil-moon"></i>
+            <span class="link-name">Dark Mode</span>
+          </a>
+        </li>
+      </ul>
+    </div>
   </nav>
 </body>
+
 </html>
