--- a/index.html
+++ b/index.html
@@ -70,10 +70,15 @@
             <i class="uil uil-moon"></i>
             <span class="link-name">Dark Mode</span>
           </a>
+          <div class="mode-toggle">
+            <span class="switch"></span>
+          </div>
         </li>
       </ul>
     </div>
   </nav>
+
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
