toggle sidevar menu clicking icon and also add its functionality

--- a/index.html
+++ b/index.html
@@ -78,6 +78,24 @@
     </div>
   </nav>
 
+  <!-- dashboard section start here -->
+  <section class="dashboard">
+    <div class="top">
+      <i class="uil uil-bars sidebar-toggle"></i>
+
+      <div class="search-box">
+        <i class="uil uil-search"></i>
+        <input type="text" placeholder="Search here...">
+      </div>
+
+      <!--<img src="images/profile.jpg" alt="">-->
+    </div>
+
+    <div class="dash-content">
+      <h2>Dashboard content here</h2>
+    </div>
+  </section>
+
   <script src="./js/script.js"></script>
 </body>
 
