add top navbar and style it

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./images/b2brain-logo-full-svg.ico" type="image/x-icon">
   <title>Simple B2Brain Dashboard</title>
   <!-- CSS stylesheet -->
   <link rel="stylesheet" href="./css/style.css">
@@ -88,7 +89,7 @@
         <input type="text" placeholder="Search here...">
       </div>
 
-      <!--<img src="images/profile.jpg" alt="">-->
+      <img src="./images/customer-2.png" alt="">
     </div>
 
     <div class="dash-content">
